# prompts_app

./: .env.example  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose-local.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 417a4789c80f_init_migration.py
app/: config.py
app/db/: session.py
app/models/: base.py  models.py  schemas.py
app/repository/: repository.py
app/routers/: dto.py  prompts_router.py
app/services/: prompt_service.py
